# Songpressplusplus

./: .gitignore  Elenco programmi, pacchetti Python e versioni utilizzate.md  README.md  README_italian.md  build_deb.sh  fix_songpress_assoc.reg  gitignore  gitignore.txt  guida_associazioni_file.md  guida_comandi_songpress.md  license.txt  license.txt.tpl  menu_sorter.py  patch_debian.md  pygettext.py  pyproject.toml  requirements.txt  songpress_cleanup.md  songpress_cleanup.py  struttura_progetto.md  struttura_progetto_it.md  sync_deps.py
.github/workflows/: build-portable.yml
TOOLS UTILY/: find_unused.py  find_unused_guida.md  fix_songpress_associations.reg  guida_associazioni_file.md  menu_sorter_colors.json  songpress_cleanup.md  songpress_cleanup.py  sync_deps.py
TOOLS UTILY/fix2/: fix_icona_songpress.bat  fix_icona_songpress.md
build_deb/: songpressplusplus_6.2.0_all.deb  songpressplusplus_7.0.0_all.deb
build_deb/songpressplusplus_6.2.0/DEBIAN/: control  postinst  postrm
build_deb/songpressplusplus_6.2.0/usr/local/lib/python3.13/dist-packages/songpressplusplus/: GuitarDiagramRenderer.py  PdfExporter.py  Pref.py  PreviewCanvas.py  PrintDialog.py  Renderer.py  SDIMainFrame.py  SongTokenizer.py  SongbookExporter.py  SongpressFrame.py  SongpressToolbars.py  SyntaxCheckerDialog.py  Tokenizer.py  Transpose.py  TransposeDialog.pot  TransposeDialog.py  errdlg.py
build_deb/songpressplusplus_6.2.0/usr/local/lib/python3.13/dist-packages/songpressplusplus-6.2.0.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt
build_deb/songpressplusplus_6.2.0/usr/share/applications/: songpressplusplus.desktop
build_deb/songpressplusplus_7.0.0/DEBIAN/: control  postinst
build_deb/songpressplusplus_7.0.0/usr/local/lib/python3.13/dist-packages/songpressplusplus/: ChordProDirectives.py  CopyAIBeatsPrompt.py  Editor.py  Globals.py  HTML.py  KlavierRenderer.py  MusicalSymbolDialog.py  MyNormalizeDialog.py  MyPreferencesDialog.py  MyTransposeDialog.py  Preferences.py  PreferencesDialog.py  SyntaxChecker.py  guida.md  guida_comandi_songpress_en.md  main.py
build_deb/songpressplusplus_7.0.0/usr/local/lib/python3.13/dist-packages/songpressplusplus-7.0.0.dist-info/: METADATA  RECORD  direct_url.json
build_deb/wheel/: songpressplusplus-6.1.1-py3-none-any.whl  songpressplusplus-6.2.0-py3-none-any.whl  songpressplusplus-7.0.0-py3-none-any.whl
installer/: Build-Portable.ps1  README_INSTALLER.md  README_INSTALLER_en.md  README_INSTALLER_it.md  Ti spiego passo.docx  fix_songpress_assoc.reg  songpress++.nsi  songpress++.nsi.old  songpress++64bit.nsi  songpress++x86.nsi  songpress-local.nsi  songpress.nsi  songpress__64bit.nsi  songpress__x64.nsi  songpress__x86.nsi  songpressx32.nsi  songpressx64.nsi  ~$ spiego passo.docx
installer/plugins/: INETC_LICENSE.md  INETC_LICENSE_it.md
installer/tools/: set_iconx-i686.bat  set_iconx64.bat  set_iconx86.bat
src/: Avvio SONGPRESS TEST.vbs  Avvio SONGPRESS.vbs  diagnostica.vbs  install_check.vbs  install_check1.vbs  main.py  setup.py  spp_frozen_main.py
src/songpress/: Editor.py  FontFaceDialog.py  Globals.py  HTML.py  KlavierRenderer.py  MusicalSymbolDialog.py  MyPreferencesDialog.py  MyTransposeDialog.py  MyUpdateDialog.py.old  Preferences.py  PreferencesDialog.py  PreferencesDialog.py.old  PreviewCanvas.py  Renderer.py  SDIMainFrame.py  SongBoxes.py  SongDecorator.py  SongTokenizer.py  SongbookExporter.py  SongpressFrame.py  SyntaxChecker.py  SyntaxCheckerDialog.py  Transpose.py  TransposeDialog.py  errdlg.py  guida.md  guida_en.md  main.py  shortcuts.py
src/songpress/decorators/: StandardVerseNumbers.py
src/songpress/img/: tempo_note.png.old
src/songpress/locale/it/LC_MESSAGES/: Editor.po  MusicalSymbolDialog.mo  MyPreferencesDialog.mo  MyPreferencesDialog.po  PreferencesDialog.mo  PreferencesDialog.po  PreviewCanvas.po  SongbookExporter.po  SongpressFrame.mo  SongpressFrame.po  SongpressFrame.po.old  SyntaxCheckerDialog.mo  SyntaxCheckerDialog.po  errdlg.mo
src/songpress/templates/themes/: Preferito2.ini  Preferito3.ini  Preferito4.ini  Preferito45.ini
src/songpress/xrc/: gui.fbp  gui.fbp.old  songpress.xrc  songpress.xrc.old  songpress_it.xrc  songpress_it.xrc.old
src/songpressPlusPlus/: CanzonatorDialog.py  CopyAIBeatsPrompt.py  Editor.py  FontFaceDialog.py  Globals.py  GuitarDiagramRenderer.py  KlavierRenderer.py  KlavierRenderer.py.old  MusicalSymbolDialog.py  MyDecoSlider.py  MyListDialog.py  MyNormalizeDialog.py  MyPreferencesDialog.py  MyTransposeDialog.py  MyUpdatePanel.py  PdfExporter.py  Pref.py  Preferences.py  PreferencesDialog.py  PreviewCanvas.py  PrintDialog.py  Renderer.py  SDIMainFrame.py  SongBoxes.py  SongDecorator.py  SongFormat.py  SongbookExporter.py  SongpressFrame.py  SongpressFrame.py.old  SongpressToolbars.py  SyntaxChecker.py  SyntaxCheckerDialog.py  Tokenizer.py  TransposeDialog.py  errdlg.py  guida.md  guida_comandi_songpress.md  guida_comandi_songpress_en.md  guida_en.md  guida_it.md  (+3 more)
src/songpressPlusPlus/decorators/: StandardVerseNumbers.py  StandardVerseNumbers.py.old
src/songpressPlusPlus/locale/it/LC_MESSAGES/: CanzonatorDialog.mo  CanzonatorDialog.po  CopyAIBeatsPrompt.mo  CopyAIBeatsPrompt.po  MusicalSymbolDialog.po  MyPreferencesDialog.mo  MyPreferencesDialog.po  Preferences.po  PreferencesDialog.mo  PreferencesDialog.po  PrintDialog.mo  PrintDialog.po  Renderer.mo  Renderer.po  SimplePropertyPanel.po  SongbookExporter.mo  SongbookExporter.po  SongpressFrame.mo  SongpressFrame.po  SongpressToolbars.mo  SongpressToolbars.po  SyntaxCheckerDialog.mo  SyntaxCheckerDialog.po
src/songpressPlusPlus/templates/themes/: Grigio_scuro.ini  Preferito.ini  Scuro.ini  Solarizzato.ini
src/songpressPlusPlus/xrc/: gui.fbp  songpress.xrc  songpress_it.xrc
src/songpressplusplus/: MyPreferencesDialog.py.bak  TemplateSeed.py  chordpro_import.py
src/songpressplusplus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/songpressplusplus/locale/it/LC_MESSAGES/: chordpro_import.mo  chordpro_import.po
(+33 files in other folders)
