[project]
name = "songpressplusplus"
version = "3.0.0"
description = "Songpress++ is a free, easy to use song typeset program for Windows and Linux, that generates high-quality songbooks."
authors = [
    { name = "Denisov21" },
    { name = "Luca Allulli" }
]
license = { text = "GNU GPL v2" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wxPython>=4.2.4,<5.0.0",
    "requests>=2.32.4,<3.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "pyshortcuts>=1.9.5,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "markdown>=3.4,<4.0.0",
    "mistune>=3.0.0,<4.0.0",
]

[project.gui-scripts]
SongpressPlusPlus = "songpressplusplus.main:main"

[project.urls]
Homepage = "https://github.com/Denisov21/Songpressplusplus"
Source = "https://github.com/Denisov21/Songpressplusplus"
Issues = "https://github.com/Denisov21/Songpressplusplus/issues"
"Homepage original" = "https://www.skeed.it/songpress"
"Source original" = "https://github.com/lallulli/songpress"
"Issues original" = "https://github.com/lallulli/songpress/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/songpressplusplus"]

# ── cx_Freeze — build eseguibile ────────────────────────────────────────────
# Eseguire da venv dedicato per evitare inclusione di pacchetti di sistema:
#
#   python -m venv .venv
#   .venv\Scripts\activate
#   pip install cx_Freeze wxPython requests python-pptx pyshortcuts reportlab pypdf markdown mistune
#   python -m cx_Freeze build_exe

[[tool.cxfreeze.executables]]
script = "src/main.py"
target_name = "SongpressPlusPlus.exe"
base = "gui"
icon = "installer/songpressplusplus.ico"

[tool.cxfreeze.build_exe]
packages = [
    "multiprocessing",
    "idna.idnadata",
    "ssl",
    "wx",
    "requests",
    "reportlab",
    "pptx",
    "pyshortcuts",
    "markdown",
    "mistune",
    "pypdf",
]
excludes = ["numpy", "tkinter"]
include_msvcr = true
include_files = [
    ["src/songpressplusplus/img",       "img"],
    ["src/songpressplusplus/locale",    "locale"],
    ["src/songpressplusplus/templates", "templates"],
    ["src/songpressplusplus/xrc",       "xrc"],
    ["pyproject.toml",                  "pyproject.toml"],
]
