[project]
name = "SongpressPlusPlus"
version = "7.0.2"
description = "Songpress++ is a free, easy to use song typeset program for Windows and Linux, that generates high-quality songbooks."
# Songpress++ è un fork di Songpress, scritto originariamente da Luca Allulli
# (https://github.com/lallulli/songpress) e rilasciato sotto GNU GPL v2.
# L'attribuzione originale è preservata negli header dei sorgenti e nel README.
authors = [
    { name = "Denisov21" },
]
maintainers = [
    { name = "Denisov21" },
]
license = "GPL-2.0-only"
license-files = ["license.txt"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wxPython>=4.2.3,<5.0.0",
    "requests>=2.32.3,<3.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "pyshortcuts>=1.9.5,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "pypdf>=5.4.0,<7.0.0",
    "markdown>=3.4,<4.0.0",
    "mistune>=3.0.0,<4.0.0",
    "pywin32>=308; sys_platform == 'win32'",
]

[project.gui-scripts]
SongpressPlusPlus = "songpressplusplus.main:main"

[project.urls]
Homepage = "https://github.com/Denisov21/Songpressplusplus"
Source = "https://github.com/Denisov21/Songpressplusplus"
Issues = "https://github.com/Denisov21/Songpressplusplus/issues"
"Homepage original" = "https://www.skeed.it/songpress"
"Source original" = "https://github.com/lallulli/songpress"
"Issues original" = "https://github.com/lallulli/songpress/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# ── Wheel / pacchetto Linux (.deb) ──────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/songpressplusplus"]

# Un wheel non può contenere directory vuote: le cartelle di lavoro sotto
# templates/local_dir/templates/{fonts,songs,themes} vengono materializzate
# tramite segnaposto .gitkeep, che qui forziamo dentro al pacchetto anche se
# esclusi da .gitignore.
artifacts = [
    "src/songpressplusplus/templates/**/.gitkeep",
]

# ── cx_Freeze — build eseguibile (Windows) ──────────────────────────────────
# Eseguire da venv dedicato per evitare inclusione di pacchetti di sistema:
#
#   python -m venv .venv
#   .venv\Scripts\activate
#   pip install cx_Freeze wxPython requests python-pptx pyshortcuts reportlab pypdf markdown mistune
#   python -m cx_Freeze build_exe

[[tool.cxfreeze.executables]]
# Non congelare main.py direttamente: usa import relativi di pacchetto e
# come script __main__ fallirebbe ("attempted relative import with no known
# parent package"). Il launcher importa il package e ne chiama main().
script = "src/spp_frozen_main.py"
target_name = "SongpressPlusPlus.exe"
base = "gui"
icon = "installer/songpressplusplus.ico"

[tool.cxfreeze.build_exe]
packages = [
    # Case identico alla cartella reale src/songpressPlusPlus: gli import
    # Python sono case-sensitive anche su Windows.
    "songpressPlusPlus",
    "multiprocessing",
    "idna.idnadata",
    "ssl",
    "wx",
    "requests",
    "reportlab",
    "pptx",
    "pyshortcuts",
    "markdown",
    "mistune",
    "pypdf",
    "win32print",
    "win32api",
]
excludes = ["numpy", "tkinter"]
include_msvcr = true
include_files = [
    ["src/songpressplusplus/img",       "img"],
    ["src/songpressplusplus/locale",    "locale"],
    ["src/songpressplusplus/templates", "templates"],
    ["src/songpressplusplus/xrc",       "xrc"],
    ["pyproject.toml",                  "pyproject.toml"],
    # File markdown della guida rapida (Help): caricati a runtime da
    # SongpressFrame via glb.path, quindi devono stare accanto all'exe.
    ["src/songpressplusplus/guida.md",                      "guida.md"],
    ["src/songpressplusplus/guida_en.md",                   "guida_en.md"],
    ["src/songpressplusplus/guida_comandi_songpress.md",    "guida_comandi_songpress.md"],
    ["src/songpressplusplus/guida_comandi_songpress_en.md", "guida_comandi_songpress_en.md"],
]
